--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0.0",
-    "illuminate/cache": "5.5.*|5.6.*",
-    "illuminate/session": "5.5.*|5.6.*"
+    "illuminate/cache": "5.5.*|5.6.*|5.7.*",
+    "illuminate/session": "5.5.*|5.6.*|5.7.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0",
